--- a/packages/playground/windows/playground/MainPage.xaml
+++ b/packages/playground/windows/playground/MainPage.xaml
@@ -134,6 +134,23 @@
                 VerticalAlignment="Center"
                 InputScope="Number"
                 MaxLength="5" />
+            <TextBlock
+                Margin="4"
+                VerticalAlignment="Center"
+                Text="JS Engine:"/>
+            <ComboBox
+                x:Name="x_JsEngine"
+                Margin="4"
+                MinWidth="150"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Center">
+                <ComboBox.Items>
+                    <ComboBoxItem Content="Chakra" />
+                    <ComboBoxItem Content="Hermes" x:Name="x_engineHermes" />
+                    <ComboBoxItem Content="V8" x:Name="x_engineV8" />
+                    <ComboBoxItem Content="QuickJS" x:Name="x_engineQuickJS" />
+                </ComboBox.Items>
+            </ComboBox>
         </StackPanel>
         <react:ReactRootView x:Name="ReactRootView"
             BorderThickness="0,1,0,0"
