--- a/packages/playground/windows/playground/MainPage.xaml
+++ b/packages/playground/windows/playground/MainPage.xaml
@@ -145,7 +145,7 @@
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Center">
                 <ComboBox.Items>
-                    <ComboBoxItem Content="Chakra" />
+                    <ComboBoxItem Content="Chakra" x:Name="x_engineChakra" />
                     <ComboBoxItem Content="Hermes" x:Name="x_engineHermes" />
                     <ComboBoxItem Content="V8" x:Name="x_engineV8" />
                 </ComboBox.Items>
