--- a/vnext/Microsoft.ReactNative/DevMenuControl.xaml
+++ b/vnext/Microsoft.ReactNative/DevMenuControl.xaml
@@ -13,6 +13,7 @@
     Background='{ThemeResource ContentDialogBackground}'
     HorizontalAlignment='Center'
     MaxWidth='900'
+    MinHeight='480'
     Margin='0,0,0,0'
   >
         <StackPanel.Resources>
